# Task-Space-Control-and-Motion-Planning-on-UR5e-and-Franka-Robot-Arms

./: .gitignore  LICENSE
manipulator_control/: README.md
manipulator_control/analysis/: benchmark_results.py
manipulator_control/ros2_ws/src/cartesian_controllers/: CMakeLists.txt  package.xml
manipulator_control/ros2_ws/src/cartesian_controllers/config/: franka_params.yaml  ur5e_params.yaml
manipulator_control/ros2_ws/src/cartesian_controllers/include/cartesian_controllers/: ik_solver.hpp  jacobian_controller.hpp  nullspace_controller.hpp
manipulator_control/ros2_ws/src/cartesian_controllers/launch/: franka_cartesian.launch.py  ur5e_cartesian.launch.py
manipulator_control/ros2_ws/src/cartesian_controllers/msg/: ControllerState.msg
manipulator_control/ros2_ws/src/cartesian_controllers/scripts/: cartesian_controller.py  trajectory_tracker.py
manipulator_control/ros2_ws/src/cartesian_controllers/src/: cartesian_controller_node.cpp  ik_solver.cpp  jacobian_controller.cpp  nullspace_controller.cpp
manipulator_control/ros2_ws/src/cartesian_controllers/srv/: ComputeIK.srv  SetPosture.srv
manipulator_control/ros2_ws/src/motion_planners/: CMakeLists.txt  package.xml
manipulator_control/ros2_ws/src/motion_planners/config/: planner_params.yaml
manipulator_control/ros2_ws/src/motion_planners/include/motion_planners/: birrt_star.hpp  collision_checker.hpp  rrt.hpp  rrt_star.hpp
manipulator_control/ros2_ws/src/motion_planners/launch/: planner.launch.py
manipulator_control/ros2_ws/src/motion_planners/src/: birrt_star.cpp  planner_node.cpp  rrt.cpp  rrt_star.cpp
