<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_planners</name>
  <version>1.0.0</version>
  <description>
    C++ motion planners for MoveIt 2 integration.
    
    Algorithms:
    - RRT (Rapidly-exploring Random Trees)
    - RRT* (Optimal RRT with rewiring)
    - Bi-RRT* (Bidirectional optimal RRT)
    
    Performance:
    - Planning time: 0.3-0.8s in cluttered scenes
    - Collision-free path generation
    - MoveIt 2 plugin interface
  </description>
  <maintainer email="bj2519@columbia.edu">Barath Kumar JK</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
